--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
             name="description"
             content="Web site created using create-react-app"
         />
-        <title>JSDEV | STORE</title>
+        <title>Artisans | Store</title>
     </head>
     <body>
         <div id="root"></div>
