--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,16 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta name="description" content="Web site created using create-react-app" />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Artisans | Store</title>
     </head>
+        
     <body>
         <div id="root"></div>
     </body>
